--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -1,5 +1,5 @@
 <script defer src="../../static/js/register.js"></script>
-    
+
 <div class="container py-4">
     <form>
         <div class="signup py-4 ">
@@ -7,13 +7,15 @@
         </div>
         <div class="form-group">
             <label for="user-id" class="form-label mt-4">닉네임</label>
-            <input type="text" class="form-control" id="user-nickname" valid="default" placeholder="유저 닉네임 입력 (최대 12자)" />
+            <input type="text" class="form-control" id="user-nickname" valid="default"
+                placeholder="유저 닉네임 입력 (최대 12자)" />
             <button type="button" class="btn btn-primary" onclick="user_nickname_check()">중복체크</button>
             <div id="nickname-check-msg"></div>
         </div>
         <div class="form-group">
             <label for="user-id" class="form-label mt-4">아이디</label>
-            <input type="text" class="form-control" id="user-id" name="user_id" valid="default" placeholder="아이디 입력 (5~20자) (특수기호 사용 불가능)" />
+            <input type="text" class="form-control" id="user-id" name="user_id" valid="default"
+                placeholder="아이디 입력 (5~20자) (특수기호 사용 불가능)" />
             <button type="button" class="btn btn-primary" onclick="user_id_check()">중복체크</button>
             <div id="id-check-msg"></div>
         </div>
@@ -34,7 +36,7 @@
             <label for="user-email" class="form-label mt-4">이메일</label>
             <input type="text" class="form-control" id="user-email" placeholder="이메일 주소@sparta.com" />
         </div>
-        <div class="d-grid">
+        <div class="d-grid gap-2 col-6 mx-auto">
             <button class="btn btn-primary btn-lg" type="button" onclick="register()">
                 회원가입
             </button>
