--- a/static/styles/write.css
+++ b/static/styles/write.css
@@ -70,6 +70,10 @@
 .ql-container {
     border: 1px solid lightcoral !important;
 }
+.ql-editor img {
+    width: 100%;
+    object-fit: cover;
+}
 
 .write-btn {
     width: 1320px;
