--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,10 @@
             crossorigin="anonymous"
         ></script>
 
+        <!-- Quill Editor CDN -->
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
         <link href="//cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
 
         <title>오늘뭐먹죠?</title>
     </head>
