--- a/templates/components/find_pw.html
+++ b/templates/components/find_pw.html
@@ -27,6 +27,7 @@
             <div>
                 <button class="find_pw_btn" type="button" onclick="find_pw()">비밀번호 찾기</button>
             </div>
+            <div id="find-pw-msg"></div>
         </div>
     </div>
 </div>
