--- a/templates/components/post.html
+++ b/templates/components/post.html
@@ -12,9 +12,18 @@
         <div class="detail-date-wrap">
             <p id="detail-date" class="detail-date"></p>
         </div>
+        <div class="detail-recommend-wrap">
+            <span>추천수</span>
+            <p id="detail-recommend" class="detail-recommend"></p>
+        </div>
     </div>
     <div class="detail-content-wrap">
         <div id="detail-content" class="ql-editor"></div>
+    </div>
+    <div class="detail-recommend-wrap">
+        <button type="button" class="detail-recommend-btn" onclick="recommend()">
+            <i id="not-recommended" class="bi bi-hand-thumbs-up"></i>
+        </button>
     </div>
 </div>
 
