--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,10 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
         ></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
+        />
 
         <!-- Quill Editor CDN -->
         <script src="//cdn.quilljs.com/1.0.0/quill.min.js"></script>
