add favicon html

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,8 @@
         <link href="//cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
 
+        <link rel="icon" href="../static/image/favicon_pizza.ico">
+
         <title>오늘뭐먹죠?</title>
     </head>
     <body>
