--- a/templates/components/register.html
+++ b/templates/components/register.html
@@ -1,45 +1,49 @@
-<script defer src="../../static/js/register.js"></script>
-
-<div class="container py-4">
-    <form>
-        <div class="signup py-4 ">
-            <h2>회원가입</h2>
+<div class="register_bg">
+    <div class="register_wrap">
+        <div class="register_title">
+            <h2 class="title">회원가입</h2>
+            <div class="nickname mb-3">
+                <label for="user-id" class="form-label ">닉네임</label>
+                <input type="text" class="form-control" id="user-nickname" valid="default"
+                    placeholder="유저 닉네임 입력 (2~12자)" />
+                <div class="btn_bg">
+                    <button type="button" class="btn" onclick="user_nickname_check()">중복체크</button>
+                </div>
+                <div id="nickname-check-msg"></div>
+            </div>
+            <div class="id mb-3">
+                <label for="user-id" class="form-label">아이디</label>
+                <input type="text" class="form-control" id="user-id" name="user_id" valid="default"
+                    placeholder="아이디 입력 (5~20자) (특수기호 사용 불가능)" />
+                <div class="btn_bg">
+                    <button type="button" class="btn" onclick="user_id_check()">중복체크</button>
+                </div>
+                <div id="id-check-msg"></div>
+            </div>
+            <div class="pw mb-3">
+                <label class="form-label" for="password">비밀번호</label>
+                <input type="password" class="form-control" id="user-pw" placeholder="비밀번호 입력 (8~20자)" />
+            </div>
+            <div class="pw_check mb-3">
+                <label class="form-label" for="password">비밀번호 확인</label>
+                <input type="password" class="form-control" id="user-pw-check" placeholder="비밀번호 재입력" />
+                <div class="invalid-feedback" id="check-msg"></div>
+            </div>
+            <div class="name mb-3">
+                <label for="user-name" class="form-label">이름</label>
+                <input type="text" class="form-control" id="user-name" placeholder="이름을 입력해주세요" />
+            </div>
+            <div class="email mb-3">
+                <label for="user-email" class="form-label">이메일</label>
+                <input type="text" class="form-control" id="user-email" placeholder="이메일 주소@sparta.com" />
+            </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <button class="btn" type="button" onclick="register()">
+                    회원가입
+                </button>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="user-id" class="form-label mt-4">닉네임</label>
-            <input type="text" class="form-control" id="user-nickname" valid="default"
-                placeholder="유저 닉네임 입력 (최대 12자)" />
-            <button type="button" class="btn btn-primary" onclick="user_nickname_check()">중복체크</button>
-            <div id="nickname-check-msg"></div>
-        </div>
-        <div class="form-group">
-            <label for="user-id" class="form-label mt-4">아이디</label>
-            <input type="text" class="form-control" id="user-id" name="user_id" valid="default"
-                placeholder="아이디 입력 (5~20자) (특수기호 사용 불가능)" />
-            <button type="button" class="btn btn-primary" onclick="user_id_check()">중복체크</button>
-            <div id="id-check-msg"></div>
-        </div>
-        <div class="form-group">
-            <label class="form-label mt-4" for="password">비밀번호</label>
-            <input type="password" class="form-control" id="user-pw" placeholder="비밀번호 입력 (8~20자)" />
-        </div>
-        <div class="form-group">
-            <label class="form-label mt-4" for="password">비밀번호 확인</label>
-            <input type="password" class="form-control" id="user-pw-check" placeholder="비밀번호 재입력" />
-            <div class="invalid-feedback" id="check-msg"></div>
-        </div>
-        <div class="form-group">
-            <label for="user-name" class="form-label mt-4">이름</label>
-            <input type="text" class="form-control" id="user-name" placeholder="이름을 입력해주세요" />
-        </div>
-        <div class="form-group">
-            <label for="user-email" class="form-label mt-4">이메일</label>
-            <input type="text" class="form-control" id="user-email" placeholder="이메일 주소@sparta.com" />
-        </div>
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-primary btn-lg" type="button" onclick="register()">
-                회원가입
-            </button>
-        </div>
-    </form>
+    </div>
 </div>
+
+<script defer src="../../static/js/register.js"></script>
