style : postlist pagination, title, author, created_at & post background style

--- a/templates/components/post.html
+++ b/templates/components/post.html
@@ -19,7 +19,7 @@
             <p id="detail-date" class="detail-date"></p>
         </div>
         <div class="detail-recommend-wrap">
-            <span>추천수</span>
+            <p>추천수</p>
             <p id="detail-recommend" class="detail-recommend"></p>
         </div>
     </div>
