--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    background: #ffffff;
 }
 
 .detail-title-wrap {
