--- a/static/styles/postlist.css
+++ b/static/styles/postlist.css
@@ -1,6 +1,5 @@
 .main {
     width: 100%;
-    background-color: FloralWhite;
     padding-top: 3rem;
 }
 
@@ -84,11 +83,24 @@
 .post-created-at p {
     margin: 0;
     font-weight: bold;
-    font-size: 1rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     word-break: break-all;
+}
+
+.post-title p {
+    font-size: 1.625rem !important;
+    color: #000000 !important;
+}
+
+.post-author p {
+    font-size: 1.2rem !important;
+    color: cornflowerblue !important;
+}
+
+.post-created-at p {
+    color: gray !important;
 }
 
 .post-pagination-wrap {
@@ -106,6 +118,11 @@
     border-radius: 10px;
     background: transparent;
     font-weight: bold;
+}
+
+.page-selected {
+    background: burlywood !important;
+    color: #ffffff;
 }
 
 @media (max-width: 1320px) {
