--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
         <link href="//cdn.quilljs.com/1.0.0/quill.snow.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
 
-        <link rel="icon" href="../static/image/favicon_pizza.ico">
+        <link rel="icon" href="../static/image/favicon_pizza.ico" />
 
         <title>오늘뭐먹죠?</title>
     </head>
@@ -56,7 +56,7 @@
         {% include "./components/header.html" %}
 
         <!-- Content -->
-        <section id="content">
+        <section id="content" class="content">
             {% if component_name == 'postlist' %} {% include "./components/postlist.html" %} {% elif
             component_name == 'login' %} {% include "./components/login.html" %} {% elif
             component_name == 'write' %} {% include "./components/write.html" %} {% elif
