--- a/static/styles/user_update.css
+++ b/static/styles/user_update.css
@@ -1,4 +1,10 @@
 @font-face {
+    font-family: 'KOFIHDrLEEJWTTF-B';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/KOFIHDrLEEJWTTF-B.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
     font-family: "ONE-Mobile-POP";
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-POP.woff")
         format("woff");
@@ -42,6 +48,18 @@
 
     border-radius: 25px;
 }
+.breadcrumb-item{
+    background-color: #ffeacd;
+
+    margin: auto;
+
+    font-family: "ONE-Mobile-POP";
+    font-weight: normal;
+    font-style: normal;
+}
+.a {
+    color: black;
+}
 
 .title {
     text-align: center;
@@ -50,7 +68,7 @@
 .mypage_title {
     background-color: white;
     width: 590px;
-    height: 600px;
+    height: 725px;
 
     display: block;
 
@@ -61,4 +79,32 @@
     font-family: "ONE-Mobile-POP";
 
     border-radius: 35px;
+}
+
+.btn_bg {
+    float: right;
+
+    height: 40px;
+    width: 85px;
+
+    margin: 5px 0 0 0;
+
+    background: #ffeacd;
+    border: 2px solid #ffeacd;
+    border-radius: 10px;
+}
+
+.d-grid {
+    height: 50px;
+    width: 100px;
+
+    font-weight: 700;
+    font-family: "ONE-Mobile-POP";
+    font-size: 2.0rem !important;
+
+    margin: 5px 0 0 0;
+
+    background: #ffeacd;
+    border: 2px solid #ffeacd;
+    border-radius: 10px;
 }
