--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="../static/styles/write.css" />
         <link rel="stylesheet" href="../static/styles/login.css" />
         <link rel="stylesheet" href="../static/styles/register.css" />
-        <link rel="stylesheet" href="../static/styles/mypage.css" />
+        <link rel="stylesheet" href="../static/styles/user_update.css" />
         <link rel="stylesheet" href="../static/styles/post.css" />
         <link rel="stylesheet" href="../static/styles/find_id.css" />
         <link rel="stylesheet" href="../static/styles/find_pw.css" />
@@ -59,7 +59,7 @@
             component_name == 'login' %} {% include "./components/login.html" %} {% elif
             component_name == 'write' %} {% include "./components/write.html" %} {% elif
             component_name == 'register' %} {% include "./components/register.html" %} {% elif
-            component_name == 'mypage' %} {% include "./components/mypage.html" %} {% elif
+            component_name == 'user_update' %} {% include "./components/mypage/user_update.html" %} {% elif
             component_name == 'find_id' %} {% include "./components/find_id.html" %} {% elif
             component_name == 'find_pw' %} {% include "./components/find_pw.html" %} {% elif
             component_name == 'post' %} {% include "./components/post.html" %} {% endif %}
