--- a/static/styles/postlist.css
+++ b/static/styles/postlist.css
@@ -26,6 +26,23 @@
     display: flex;
     align-items: center;
     height: 100%;
+    gap: 0.5rem;
+}
+
+.main-menu-left .postlist-newest-btn,
+.main-menu-left .postlist-recommend-btn {
+    background: transparent;
+    color: burlywood;
+    border: 2px solid burlywood;
+    font-weight: bold;
+    padding: 0.75rem 1.25rem;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.main-menu-selected {
+    background-color: burlywood !important;
+    color: #ffffff !important;
 }
 
 .main-menu-right .write-link-btn {
@@ -35,6 +52,7 @@
     padding: 0.75rem 1.25rem;
     border-radius: 10px;
     color: #ffffff;
+    box-sizing: border-box;
 }
 
 .main-content {
@@ -73,9 +91,18 @@
 }
 
 .post-author,
+.post-recommend,
 .post-created-at {
     width: 100%;
     padding: 0 0.5rem;
+}
+
+.post-recommend {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    font-size: 1.25rem;
 }
 
 .post-title p,
@@ -92,6 +119,15 @@
 .post-title p {
     font-size: 1.625rem !important;
     color: #000000 !important;
+}
+
+.post-recommend i {
+    color: red;
+}
+
+.post-recommend p {
+    margin: 0;
+    color: red;
 }
 
 .post-author p {
@@ -130,6 +166,12 @@
         width: 100%;
     }
 
+    .main-menu-left .postlist-newest-btn,
+    .main-menu-left .postlist-recommend-btn {
+        font-size: 0.8rem;
+        padding: 0.5rem 0.75rem;
+    }
+
     .main-menu-right .write-link-btn {
         font-size: 0.8rem;
         padding: 0.5rem 0.75rem;
@@ -141,6 +183,16 @@
 
     .post-thumbnail {
         height: 15rem;
+    }
+
+    .post-title p {
+        font-size: 1.25rem !important;
+    }
+    .post-author p {
+        font-size: 0.825rem !important;
+    }
+    .post-created-at p {
+        font-size: 0.75rem !important;
     }
 
     .post-pagination-wrap {
