--- a/templates/components/postlist.html
+++ b/templates/components/postlist.html
@@ -1,28 +1,53 @@
 <div class="main">
     <div class="main-wrap">
         <div class="main-menu">
-            <div class="main-menu-left">dfdf</div>
+            <div class="main-menu-left">
+                <button
+                    sort-type="newest"
+                    class="postlist-newest-btn"
+                    onclick="window.location.href='/?sort=newest'"
+                >
+                    최신순
+                </button>
+                <button
+                    sort-type="recommend"
+                    class="postlist-recommend-btn"
+                    onclick="window.location.href='/?sort=recommend'"
+                >
+                    추천순
+                </button>
+            </div>
             {% if 'user-info' in session %}
             <div class="main-menu-right">
-                <a href="/write">
-                    <div class="write-link-btn">글 쓰기</div>
-                </a>
+                <button class="write-link-btn" onclick="window.location.href='/write'">
+                    글 쓰기
+                </button>
             </div>
             {% endif %}
         </div>
         <div id="main-content" class="main-content"></div>
         <div id="post-list-err-msg"></div>
         <div class="post-pagination-wrap">
-            {% if post_page != 0 %} {% for i in range(post_page) %}
+            {% if post_page != 0 %} {% if sort == "recommend" %} {% for i in range(post_page) %}
             <button
                 data-index="{{i+1}}"
                 type="button"
                 class="post-pagination"
-                onclick="get_post_list('{{i+1}}')"
+                onclick="get_post_list('{{i+1}}' , 'recommend')"
             >
                 {{i+1}}
             </button>
-            {% endfor %} {% endif %}
+
+            {% endfor %} {% else %} {% for i in range(post_page) %}
+            <button
+                data-index="{{i+1}}"
+                type="button"
+                class="post-pagination"
+                onclick="get_post_list('{{i+1}}' , 'newest')"
+            >
+                {{i+1}}
+            </button>
+            {% endfor %} {% endif %} {% endif %}
         </div>
     </div>
 </div>
