--- a/templates/components/mypage/my_like_post.html
+++ b/templates/components/mypage/my_like_post.html
@@ -6,9 +6,9 @@
     <div class="mypage_wrap">
         <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/my_like_post">내가 좋아요 한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/my_post">내가 작성한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/user_update">내 정보 수정</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/my_like_post">내가 좋아요 한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/my_post">내가 작성한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/user_upadate">내 정보 수정</a></li>
             </ol>
         </nav>
         <div class="mypage_title">
