--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
         <link rel="stylesheet" href="../static/styles/write.css" />
         <link rel="stylesheet" href="../static/styles/login.css" />
         <link rel="stylesheet" href="../static/styles/register.css" />
+        <link rel="stylesheet" href="../static/styles/my_like_post.css" />
+        <link rel="stylesheet" href="../static/styles/my_post.css" />
         <link rel="stylesheet" href="../static/styles/user_update.css" />
         <link rel="stylesheet" href="../static/styles/post.css" />
         <link rel="stylesheet" href="../static/styles/find_id.css" />
@@ -61,10 +63,12 @@
             component_name == 'login' %} {% include "./components/login.html" %} {% elif
             component_name == 'write' %} {% include "./components/write.html" %} {% elif
             component_name == 'register' %} {% include "./components/register.html" %} {% elif
-            component_name == 'user_update' %} {% include "./components/mypage/user_update.html" %} {% elif
             component_name == 'find_id' %} {% include "./components/find_id.html" %} {% elif
             component_name == 'find_pw' %} {% include "./components/find_pw.html" %} {% elif
-            component_name == 'post' %} {% include "./components/post.html" %} {% endif %}
+            component_name == 'post' %} {% include "./components/post.html" %} {% elif
+            component_name == 'mypage', 'my_like_post' %} {% include "./components/mypage/my_like_post.html" %} {% elif
+            component_name == 'my_post' %} {% include "./components/mypage/my_post.html" %} {% elif
+            component_name == 'user_update' %} {% include "./components/mypage/user_update.html" %} {% endif %}
         </section>
     </body>
 </html>
