--- a/templates/components/mypage/user_update.html
+++ b/templates/components/mypage/user_update.html
@@ -6,13 +6,13 @@
     <div class="mypage_wrap">
         <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item" aria-current="page"><a href="/my_like_post">내가 좋아요 한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/my_post">내가 작성한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/user_upadate">내 정보 수정</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage">내가 좋아요 한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/my_post">내가 작성한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/user_update">내 정보 수정</a></li>
             </ol>
         </nav>
         <div class="mypage_title">
-            <h2 class="title">My Page</h2>
+            <h2 class="title">회원 정보 수정</h2>
             <div class="nickname mb-3">
                 <label class="form-label">Nickname</label>
                 <input type="text" class="form-control" onkeyup="check_box()"
