--- a/templates/components/mypage/my_like_post.html
+++ b/templates/components/mypage/my_like_post.html
@@ -6,13 +6,13 @@
     <div class="mypage_wrap">
         <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item" aria-current="page"><a href="/my_like_post">내가 좋아요 한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/my_post">내가 작성한 글 보기</a></li>
-                <li class="breadcrumb-item" aria-current="page"><a href="/user_upadate">내 정보 수정</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage">내가 좋아요 한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/my_post">내가 작성한 글 보기</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/mypage/user_update">내 정보 수정</a></li>
             </ol>
         </nav>
         <div class="mypage_title">
-            <h2 class="title">My Page</h2>
+            <h2 class="title">좋아요 한 게시글</h2>
             <div class="nickname mb-3">
                 <label class="form-label">Nickname</label>
                 <input type="text" class="form-control" onkeyup="check_box()"
@@ -31,20 +31,6 @@
                 <label class="form-label" for="password">Password</label>
                 <input type="password" class="form-control" id="user-pw" value="{{session['user-info']['user_pw']}}"
                     aria-label="Disabled input" disabled readonly />
-            </div>
-            <div class="name mb-3">
-                <label for="user-name" class="form-label">Username</label>
-                <input type="text" class="form-control" id="user-name" value="{{session['user-info']['user_name']}}" />
-            </div>
-            <div class="email mb-3">
-                <label class="form-label">Email address</label>
-                <input type="email" class="form-control" id="user-email" value="{{session['user-info']['user_email']}}"
-                    aria-label="Disabled input" disabled readonly />
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn" type="button" onclick="mypage()">
-                    Update
-                </button>
             </div>
         </div>
     </div>
