--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="../static/styles/register.css" />
         <link rel="stylesheet" href="../static/styles/my_like_post.css" />
         <link rel="stylesheet" href="../static/styles/my_post.css" />
-        <link rel="stylesheet" href="../static/styles/user_update.css" />
+        <link rel="stylesheet" href="../static/styles/mypage.css" />
         <link rel="stylesheet" href="../static/styles/post.css" />
         <link rel="stylesheet" href="../static/styles/find_id.css" />
         <link rel="stylesheet" href="../static/styles/find_pw.css" />
@@ -66,10 +66,10 @@
             component_name == 'find_id' %} {% include "./components/find_id.html" %} {% elif
             component_name == 'find_pw' %} {% include "./components/find_pw.html" %} {% elif
             component_name == 'post' %} {% include "./components/post.html" %} {% elif
-            component_name == 'mypage' %} {% include "./components/mypage/my_like_post.html" %} {% elif
-            component_name == 'my_like_post'  %} {% include "./components/mypage/my_like_post.html" %} {% elif
-            component_name == 'my_post' %} {% include "./components/mypage/my_post.html" %} {% elif
-            component_name == 'user_update' %} {% include "./components/mypage/user_update.html" %} {% endif %}
+            component_name == 'mypage' %} {% include "./components/mypage.html" %} {% elif
+            component_name == 'mypage_like_post' %} {% include "./components/my_like_post.html" %}
+            {% elif component_name == 'mypage_my_post' %} {% include "./components/my_post.html"
+            %}{% endif %}
         </section>
     </body>
 </html>
