feat: find id/find pw/ update pw - little

--- a/templates/components/find_pw.html
+++ b/templates/components/find_pw.html
@@ -8,26 +8,28 @@
                 <div class="find_pw_name_box">
                     <label for="find_pw_name" class="form-label">이름</label>
                 </br>
-                    <input type="name" class="form-control" id="find_pw_name"
+                    <input type="name" class="form-control" id="user-name"
                         placeholder="이름을 입력해주세요.">
                 </div>
                 <div class="find_pw_id_box">
                     <label for="find_pw_id" class="form-label">아이디</label>
                 </br>
-                    <input type="id" class="form-control" id="find_pw_id"
+                    <input type="id" class="form-control" id="user-id"
                         placeholder="아이디를 입력해주세요.">
                 </div>
                 <div class="find_pw_email_box">
                     <label for="find_pw_email" class="form-label">이메일</label>
                 </br>
-                    <input type="email" class="form-control" id="find_pw_email"
+                    <input type="email" class="form-control" id="user-email"
                         placeholder="이메일 주소@sparta.com">
                 </div>
             </div>
             <div>
                 <button class="find_pw_btn" type="button" onclick="find_pw()">비밀번호 찾기</button>
             </div>
-            <div id="find-pw-msg"></div>
+            <div id="find-pw-msg-suc">
+            </div>
+            <div id="find-pw-msg-fail"></div>
         </div>
     </div>
 </div>
