--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="../static/styles/post.css" />
         <link rel="stylesheet" href="../static/styles/find_id.css" />
         <link rel="stylesheet" href="../static/styles/find_pw.css" />
+        <link rel="stylesheet" href="../static/styles/update_pw.css" />
 
         <!-- bootstrap -->
         <link
@@ -62,6 +63,7 @@
             component_name == 'mypage' %} {% include "./components/mypage.html" %} {% elif
             component_name == 'find_id' %} {% include "./components/find_id.html" %} {% elif
             component_name == 'find_pw' %} {% include "./components/find_pw.html" %} {% elif
+            component_name == 'update_pw' %} {% include "./components/update_pw.html" %} {% elif
             component_name == 'post' %} {% include "./components/post.html" %} {% endif %}
         </section>
     </body>
