fix : post list count error & my post recommend error

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,8 @@
             component_name == 'post' %} {% include "./components/post.html" %} {% elif
             component_name == 'mypage' %} {% include "./components/mypage.html" %} {% elif
             component_name == 'mypage_like_post' %} {% include "./components/my_like_post.html" %}
-            {% elif component_name == 'mypage_my_post' %} {% include "./components/my_post.html"
-            %}{% endif %}
+            {% elif component_name == 'mypage_my_post' %} {% include "./components/my_post.html" %}
+            {% elif component_name == 'edit' %} {% include "./components/edit.html" %} {% endif %}
         </section>
     </body>
 </html>
