--- a/static/styles/my_like_post.css
+++ b/static/styles/my_like_post.css
@@ -57,9 +57,6 @@
     font-weight: normal;
     font-style: normal;
 }
-.a {
-    color: black;
-}
 
 .title {
     text-align: center;
@@ -80,31 +77,84 @@
 
     border-radius: 35px;
 }
-
-.btn_bg {
-    float: right;
-
-    height: 40px;
-    width: 85px;
-
-    margin: 5px 0 0 0;
-
-    background: #ffeacd;
-    border: 2px solid #ffeacd;
-    border-radius: 10px;
+body {
+    padding:1.5em;
+    background: #f5f5f5
 }
 
-.d-grid {
-    height: 50px;
-    width: 100px;
+table {
+    text-align: center;
+    border: 1px #a39485 solid;
+    font-size: .9em;
+    box-shadow: 0 2px 5px rgba(0,0,0,.25);
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 5px;
+    overflow: hidden;
+}
+  
+th {
+    font-size: 18px;
+    color: black;
+}
+    
+thead {
+    font-weight: bold;
+    color: #fff;
+    background: #B68A63;
+}
+    
+td, th {
+    padding: 1em .5em;
+    vertical-align: middle;
+}
+    
+td {
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    background: #fff;
+}
 
-    font-weight: 700;
-    font-family: "ONE-Mobile-POP";
-    font-size: 2.0rem !important;
+a {
+    color: #73685d;
+}
+    
+@media all and (max-width: 768px) {
+    
+table, thead, tbody, th, td, tr {
+    display: block;
+}
 
-    margin: 5px 0 0 0;
+table {
+    position: relative; 
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+}
 
-    background: #ffeacd;
-    border: 2px solid #ffeacd;
-    border-radius: 10px;
+thead {
+    float: left;
+    white-space: nowrap;
+}
+
+tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+}
+
+tr {
+    display: inline-block;
+    vertical-align: top;
+}
+
+th {
+    border-bottom: 1px solid #a39485;
+}
+
+td {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+
 }
