--- a/templates/components/my_post.html
+++ b/templates/components/my_post.html
@@ -4,54 +4,28 @@
 
 <div class="mypage_bg">
     <div class="mypage_wrap">
-        <nav style="--bs-breadcrumb-divider: '|'" aria-label="breadcrumb">
+        <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item" aria-current="page">
-                    <a href="/mypage">내 정보 수정</a>
-                </li>
-                <li class="breadcrumb-item" aria-current="page">
-                    <a href="/mypage/my_like_post">내가 좋아요 한 글 보기</a>
-                </li>
-                <li class="breadcrumb-item" aria-current="page">
-                    <a href="/mypage/my_post">내가 작성한 글 보기</a>
-                </li>
+                <li class="breadcrumb-item" aria-current="page"> <a href="/mypage">내 정보 수정</a> </li>
+                <li class="breadcrumb-item" aria-current="page"> <a href="/mypage/my_like_post">내가 좋아요 한 글 보기</a> </li>
+                <li class="breadcrumb-item" aria-current="page"> <a href="/mypage/my_post">내가 작성한 글 보기</a> </li>
             </ol>
         </nav>
         <div class="mypage_title">
             <h2 class="title">내가 작성한 글</h2>
             <div class="nickname mb-3">
                 <label class="form-label">Nickname</label>
-                <input
-                    type="text"
-                    class="form-control"
-                    onkeyup="check_box()"
-                    value="{{session['user-info']['user_nickname']}}"
-                    id="user-nickname"
-                />
+                <input type="text" class="form-control" onkeyup="check_box()"
+                    value="{{session['user-info']['user_nickname']}}" id="user-nickname" />
                 <div class="btn_bg">
-                    <button
-                        type="button"
-                        class="btn"
-                        id="btn"
-                        disabled
-                        onclick="user_nickname_check()"
-                    >
-                        중복체크
-                    </button>
+                    <button type="button" class="btn" id="btn" disabled onclick="user_nickname_check()">중복체크</button>
                 </div>
                 <div id="nickname-check-msg"></div>
             </div>
             <div class="id mb-3">
                 <label class="form-label">ID</label>
-                <input
-                    type="text"
-                    class="form-control"
-                    id="user-id"
-                    value="{{session['user-info']['user_id']}}"
-                    aria-label="Disabled input"
-                    disabled
-                    readonly
-                />
+                <input type="text" class="form-control" id="user-id" value="{{session['user-info']['user_id']}}"
+                    aria-label="Disabled input" disabled readonly />
             </div>
         </div>
     </div>
