--- a/templates/components/post.html
+++ b/templates/components/post.html
@@ -46,7 +46,7 @@
         <button
             type="button"
             class="post-edit-btn"
-            onclick="location.href='/edit?post_id={{post_id}}'"
+            onclick="location.href='/edit?postid={{post_id}}'"
         >
             수정
         </button>
