--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="../static/styles/find_id.css" />
         <link rel="stylesheet" href="../static/styles/find_pw.css" />
         <link rel="stylesheet" href="../static/styles/update_pw.css" />
+        <link rel="stylesheet" href="../static/styles/edit.css" />
 
         <!-- bootstrap -->
         <link
