--- a/templates/components/edit.html
+++ b/templates/components/edit.html
@@ -1,30 +1,27 @@
-<div class="write-wrap">
-    <!-- session 에 담긴 사용자 정보 저장-->
-    <input id="post-author" type="hidden" value="{{session['user-info']['id']}}" />
-
+<div class="edit-wrap">
     <div class="title-wrap">
-        <input id="post-title" placeholder="제목을 입력하세요" />
+        <input id="edit-title" placeholder="제목을 입력하세요" />
     </div>
     <div class="file-wrap">
-        <input id="post-image" type="file" accept="image/*" />
+        <input id="edit-image" type="file" accept="image/*" />
     </div>
     <div class="thumbnail-wrap">
         <img id="thumbnail-img" src="" alt="thumbnail-img" />
     </div>
     <!-- 썸네일 이미지 정보 저장 -->
-    <input id="post-thumbnail" type="hidden" />
+    <input id="edit-thumbnail" type="hidden" />
 
     <div class="editor-wrap">
         <div id="editor"></div>
     </div>
     <!-- quill editor 안에 작성된 내용들을 저장 -->
-    <input id="post-content" type="hidden" />
+    <input id="edit-content" type="hidden" />
 </div>
 
-<div class="write-btn">
-    <button type="button" class="write-cancel-btn" onclick="location.href='/'">취소</button>
-    <button type="button" class="write-submit-btn" onclick="post_submit()">등록</button>
+<div class="edit-btn">
+    <button type="button" class="edit-cancel-btn" onclick="location.href='/'">취소</button>
+    <button type="button" class="edit-submit-btn" onclick="edit_submit()">수정</button>
 </div>
 
 <!-- Initialize Quill editor -->
-<script defer src="../../static/js/write.js"></script>
+<script defer src="../../static/js/edit.js"></script>
