--- a/static/styles/my_post.css
+++ b/static/styles/my_post.css
@@ -1,6 +1,7 @@
 @font-face {
-    font-family: 'KOFIHDrLEEJWTTF-B';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/KOFIHDrLEEJWTTF-B.woff2') format('woff2');
+    font-family: "KOFIHDrLEEJWTTF-B";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/KOFIHDrLEEJWTTF-B.woff2")
+        format("woff2");
     font-weight: 700;
     font-style: normal;
 }
@@ -29,14 +30,13 @@
     .mypage_bg .mypage_wrap .email {
         width: 100%;
     }
-
 }
 
 .mypage_bg {
     width: 100%;
     height: 100%;
 
-    padding : 50px 30px 30px 30px ;
+    padding: 50px 30px 30px 30px;
 }
 
 .mypage_wrap {
@@ -48,7 +48,7 @@
 
     border-radius: 25px;
 }
-.breadcrumb-item{
+.breadcrumb-item {
     background-color: #ffeacd;
 
     margin: auto;
@@ -71,90 +71,92 @@
 
     margin: 100px auto;
     padding: 100px 40px 100px 40px;
-    
+
     font-weight: normal;
     font-family: "ONE-Mobile-POP";
 
     border-radius: 35px;
 }
 body {
-    padding:1.5em;
-    background: #f5f5f5
+    background: #f5f5f5;
 }
 
 table {
     text-align: center;
     border: 1px #a39485 solid;
-    font-size: .9em;
-    box-shadow: 0 2px 5px rgba(0,0,0,.25);
+    font-size: 0.9em;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
     width: 100%;
     border-collapse: collapse;
     border-radius: 5px;
     overflow: hidden;
 }
-  
+
 th {
     font-size: 18px;
     color: black;
 }
-    
+
 thead {
     font-weight: bold;
     color: #fff;
-    background: #B68A63;
+    background: #b68a63;
 }
-    
-td, th {
-    padding: 1em .5em;
+
+td,
+th {
+    padding: 1em 0.5em;
     vertical-align: middle;
 }
-    
+
 td {
-    border-bottom: 1px solid rgba(0,0,0,.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     background: #fff;
 }
 
 a {
     color: #73685d;
 }
-    
+
 @media all and (max-width: 768px) {
-    
-table, thead, tbody, th, td, tr {
-    display: block;
-}
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+        display: block;
+    }
 
-table {
-    position: relative; 
-    padding-bottom: 0;
-    border: none;
-    box-shadow: 0 0 10px rgba(0,0,0,.2);
-}
+    table {
+        position: relative;
+        padding-bottom: 0;
+        border: none;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
 
-thead {
-    float: left;
-    white-space: nowrap;
-}
+    thead {
+        float: left;
+        white-space: nowrap;
+    }
 
-tbody {
-    overflow-x: auto;
-    overflow-y: hidden;
-    position: relative;
-    white-space: nowrap;
-}
+    tbody {
+        overflow-x: auto;
+        overflow-y: hidden;
+        position: relative;
+        white-space: nowrap;
+    }
 
-tr {
-    display: inline-block;
-    vertical-align: top;
-}
+    tr {
+        display: inline-block;
+        vertical-align: top;
+    }
 
-th {
-    border-bottom: 1px solid #a39485;
-}
+    th {
+        border-bottom: 1px solid #a39485;
+    }
 
-td {
-    border-bottom: 1px solid #e5e5e5;
-}
-
-
+    td {
+        border-bottom: 1px solid #e5e5e5;
+    }
 }
