style : post info style

--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -251,6 +251,10 @@
     .detail-info-wrap {
         padding: 0 1rem;
     }
+    .detail-info-wrap p {
+        font-size: 0.625rem;
+    }
+
     .detail-content-wrap {
         padding: 5rem 1rem;
     }
