--- a/static/styles/mypage.css
+++ b/static/styles/mypage.css
@@ -15,6 +15,8 @@
 @media (max-width: 768px) {
     .mypage_bg .mypage_wrap {
         width: 100%;
+        padding: 25px 5px 15px 5px;
+        margin: 10px 5px 10px 5px;
     }
 
     .mypage_bg .mypage_wrap .mypage_title {
@@ -44,7 +46,8 @@
     height: 1000px;
     background-color: #ffeacd;
     padding: 50px 50px 50px 50px;
-    margin: 0 auto;
+
+    
 
     border-radius: 25px;
 }
