--- a/static/styles/my_like_post.css
+++ b/static/styles/my_like_post.css
@@ -16,6 +16,8 @@
 @media (max-width: 768px) {
     .mypage_bg .mypage_wrap {
         width: 100%;
+        margin: 20px 5px 20px 5px;
+        padding: auto;
     }
 
     .mypage_bg .mypage_wrap .mypage_title {
